attempt(3): fix header size on mobile

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -52,8 +52,9 @@ a[href]
 .mobile-header-height
   letter-spacing: -2.25px
   margin-bottom: 10px
+  margin-top: -5px
   font-kerning: none
-  font-size: 50px
+  font-size: 35px
 
 .header-height
   letter-spacing: -0.5px
